--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: '>= 4.7.0'
+  redux: ^3.0.0
+  flutter_redux: ^0.5.3
 
 
   # The following adds the Cupertino Icons font to your application.
