--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: '>= 4.7.0'
   redux: ^3.0.0
   flutter_redux: ^0.5.3
+  animator: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
